Добавлена версия phpdocapi и версия api

--- a/Resources/views/template/index.html
+++ b/Resources/views/template/index.html
@@ -34,7 +34,11 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="#">{{ title }}</a>
+
         </div>
+          <div class="pull-right">
+              <p class="navbar-text">Ver. {{ version }}</p>
+          </div>
       </div>
     </div>
 
@@ -50,7 +54,7 @@
                 Generated on {{ date }}
             </div>
             <div class="col-md-6" align="right">
-                <a href="https://github.com/calinrada/php-apidoc" target="_blank">php-apidoc v {{ version }}</a>
+                <a href="https://github.com/calinrada/php-apidoc" target="_blank">php-apidoc v {{ version-apidoc }}</a>
             </div>
         </div>
 
