--- a/Resources/views/template/index.html
+++ b/Resources/views/template/index.html
@@ -20,41 +20,58 @@
         .null     { color: magenta; }
         .key      { color: red; }
         .popover  { max-width: 400px; max-height: 400px; overflow-y: auto;}
+        .sidenav {
+            width: 228px;
+            margin: 0;
+            padding: 20px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            overflow-x: hidden;
+            overflow-y: auto;
+            background-color: #f5f5f5;
+        }
     </style>
 </head>
 <body>
-    <!-- Fixed navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">{{ title }}</a>
-
-        </div>
-          <div class="pull-right">
-              <p class="navbar-text">Ver. {{ version }}</p>
-          </div>
-      </div>
-    </div>
-
     <div class="container">
-        <hr>
-        <div class="panel-group" id="accordion">
-            {{ content }}
-        </div>
-        <hr>
-
-        <div class="row mt0 footer">
-            <div class="col-md-6" align="left">
-                Generated on {{ date }}
+        <div class="row">
+            <div class="hidden-sm hidden-xs" id="sidenav">
+                {{ sidebar }}
             </div>
-            <div class="col-md-6" align="right">
-                <a href="https://github.com/calinrada/php-apidoc" target="_blank">php-apidoc v {{ version-apidoc }}</a>
+            <div class="col-md-offset-3 col-lg-offset-2 col-md-9 col-lg-10">
+                <!-- Fixed navbar -->
+                <div class="navbar navbar-default" role="navigation">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                                <span class="sr-only">Toggle navigation</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="#">{{ title }}</a>
+
+                        </div>
+                        <div class="pull-right">
+                            <p class="navbar-text">Ver. {{ version }}</p>
+                        </div>
+                </div>
+
+                <hr>
+                <div class="panel-group" id="accordion">
+                    {{ content }}
+                </div>
+                <hr>
+
+                <div class="row mt0 footer">
+                    <div class="col-md-6" align="left">
+                        Generated on {{ date }}
+                    </div>
+                    <div class="col-md-6" align="right">
+                        <a href="https://github.com/calinrada/php-apidoc" target="_blank">php-apidoc v {{ version-apidoc }}</a>
+                    </div>
+                </div>
             </div>
         </div>
 
